Theme-maison saas

--- a/style/index.html
+++ b/style/index.html
@@ -61,8 +61,8 @@
     <section class="section1">
       <div class="text-sec1">
         <h4>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolor eos
-          voluptates illum!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />Ea
+          dolor eos voluptates illum!
         </h4>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis
@@ -129,7 +129,7 @@
     <section class="section4">
       <div class="container">
         <div class="base-contain">
-          <img src="../img/h5-img-02.png" alt="" />
+          <img src="/Theme-maison/assets/img/h5-img-02.png" alt="" />
           <h3>Super hôte</h3>
           <p>
             Nous apportons une importance considérable à votre entière
@@ -137,7 +137,7 @@
           </p>
         </div>
         <div class="base-contain">
-          <img src="../img/h5-img-03.png" alt="" />
+          <img src="/Theme-maison/assets/img/h5-img-03.png" alt="" />
           <h3>Nuits calme</h3>
           <p>
             Sans aucune autre habitation dans les 500 mètres à la ronde, vous
@@ -145,7 +145,7 @@
           </p>
         </div>
         <div class="base-contain">
-          <img src="../img/h5-img-04.png" alt="" />
+          <img src="/Theme-maison/assets/img/h5-img-04.png" alt="" />
           <h3>Localisation idéale</h3>
           <p>
             Notre maison se situe à juste quelques kilomètres des montagnes et
@@ -153,7 +153,7 @@
           </p>
         </div>
         <div class="base-contain">
-          <img src="../img/h5-img-05 (1).png" alt="" />
+          <img src="/Theme-maison/assets/img/h5-img-05 (1).png" alt="" />
           <h3>Annulation gratuite</h3>
           <p>
             Vestibulum a blandit ex, in tempor dolor. Phasellus dolor nisl,
@@ -162,7 +162,7 @@
           </p>
         </div>
         <div class="base-contain">
-          <img src="../img/h5-img-06.png" alt="" />
+          <img src="/Theme-maison/assets/img/h5-img-06.png" alt="" />
           <h3>Payez sur place</h3>
           <p>
             Vestibulum a blandit ex, in tempor dolor. Phasellus dolor nisl,
@@ -171,7 +171,7 @@
           </p>
         </div>
         <div class="base-contain">
-          <img src="../img/h5-img-07.png" alt="" />
+          <img src="/Theme-maison/assets/img/h5-img-07.png" alt="" />
           <h3>Délicates attentions</h3>
           <p>
             Vestibulum a blandit ex, in tempor dolor. Phasellus dolor nisl,
@@ -182,8 +182,8 @@
       </div>
     </section>
     <footer>
-      <div class="foot_contain">
-        <div>
+      <div class="foot-contain">
+        <div class="lien">
           <h1>la maison</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod cumque
@@ -208,8 +208,8 @@
             <li>wwww.e-monsite.com</li>
           </ul>
         </div>
-        <p class="copyright">Démo - Site fièrement créé avec e-monsite</p>
       </div>
+      <p class="copyright">Démo - Site fièrement créé avec e-monsite</p>
     </footer>
   </body>
 </html>
